	- Rename variable prev to copy to avoid confusion. (DLR)
  print1opt_full()
	- If desc should be empty, allow it to be NULL instead of
	  "", since the latter is not necessarily translated as "".
	  (DLR, found by Jordi)
  usage()
	- Add missing N_() around one message, so that it isn't
	  erroneously translated twice. (DLR)
  do_tab()
	- Remove unneeded variable kbinput. (DLR)
  do_alt_speller()
	- Replace a set_modified() with SET(MODIFIED) to avoid an
	  unnecessary update, and remove an unneeded clearok(FALSE).
	  (DLR)
  do_output()
	- Properly allow wrapping when we insert a tab, for consistency.
	  (DLR)
	- Don't set current_len until after it's been asserted that both
	  current and current->data aren't NULL. (DLR)
  disable_extended_input()
	- Disable extended output processing as well as extended input
	  processing, and rename to disable_extended_io(). (DLR)
- nano.h:
	- Add macro charset(), a wrapper that calls memset(). (DLR)
	- Readd #defines for the isblank() and iswblank() equivalents.
	  (DLR)
- rcfile.c:
  color_to_int()
	- Since colorname's being NULL is handled elsewhere now, assert
	  that it isn't NULL at the beginning of the function. (DLR)
  parse_colors()
	- Properly parse a background color without a foreground color.
	  (DLR)
	- Properly generate an error if we get a color directive without
	  a regex string. (DLR)
  parse_rcfile()
	- Properly generate an error if we get an invalid multibyte
	  string for an option, instead of working around it. (DLR)
	- Use has_blank_mbchars() to check for blank characters in the
	  "punct" and "brackets" options, and clarify the error message
	  displayed when we find blank characters. (DLR)
- search.c:
  do_gotoline()
	- Properly show an error message if we try to go to line 0,
	  since the first line in the file is 1. (DLR)
	- Start the search for a line from fileage instead of current
	  (again). (DLR)
  replace_regexp()
	- Rename variable create_flag to create for consistency. (DLR)